Fixed light/dark mode "feature"

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
 	line-height: 1.5;
 	font-weight: 400;
 
-	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
 	background-color: #242424;
 
@@ -44,6 +43,7 @@ button {
 	border-radius: 8px;
 	border: 1px solid transparent;
 	padding: 0.6em 1.2em;
+	color: inherit;
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
@@ -57,17 +57,4 @@ button:hover {
 button:focus,
 button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
 }
